--- a/code/main.css
+++ b/code/main.css
@@ -2,7 +2,8 @@
 .item {
     padding: 4px 8px;
     transition: background-color 0.4s;
-  }
-.is-active {
-    background: #ffeaea;
+}
+
+.tuyoi {
+    color: red;
 }
